2008-06-28  Daniel Eddeland <danedde@svn.gnome.org>

	* app/text/gimptext-bitmap.c
	* app/text/gimptext-private.h
	* app/text/gimptext-bitmap.h
	* app/text/gimptextlayer.c
	* app/text/gimptextlayout.c
	* app/text/gimptextlayout-render.c
	* app/text/gimptext-vectors.c: minor beauty changes (spacing).

2008-06-27  Daniel Eddeland <danedde@svn.gnome.org>

	* app/text/gimptext-vectors.c: fixed "Text-to-path" crash.

2008-06-25  Daniel Eddeland <danedde@svn.gnome.org>

	* app/text/gimptext-bitmap.c
	* app/text/gimptextlayer.c
	* app/text/gimptextlayout.c
	* app/text/gimptextlayout-render.c: fixed black-box bug and made some
	minor changes.

2008-06-21  Daniel Eddeland <danedde@svn.gnome.org>

	* app/text/gimptext-bitmap.c
	* app/text/gimptext-private.h
	* app/text/gimptext-bitmap.h
	* app/text/gimptextlayer.c
	* app/text/gimptextlayout.c
	* app/text/gimptext-vectors.c
	* app/text/gimptextlayout-render.c: replaced ft2 functions and
	datatypes with cairo

	* app/ext/Makefile.am
	* app/Makefile.am
	* configure.in: added pangocairo

2008-06-09  Daniel Eddeland <danedde@svn.gnome.org>

	* app/text/gimptextlayout-render.c: Added a temporary comment for
	trying out the svn commit.

2008-05-26  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	Creating soc-2008-text branch starting from rev 25808
	of trunk.
	