@@ -1,3 +1,7 @@
+2008-06-29  Daniel Eddeland <danedde@svn.gnome.org>
+
+	* app/text/gimptext-vectors.c: ported "text-to-path" code  to cairo
+
 2008-06-28  Daniel Eddeland <danedde@svn.gnome.org>
 
 	* app/text/gimptext-bitmap.c
